clippy.log
[1m[92m   Compiling[0m libc v0.2.183
[1m[92m    Checking[0m typenum v1.19.0
[1m[92m   Compiling[0m cfg-if v1.0.4
[1m[92m   Compiling[0m libloading v0.8.9
[1m[92m    Checking[0m subtle v2.6.1
[1m[92m    Checking[0m zerocopy v0.8.42
[1m[92m    Checking[0m generic-array v0.14.7
[1m[92m    Checking[0m getrandom v0.2.17
[1m[92m   Compiling[0m jobserver v0.1.34
[1m[92m   Compiling[0m clang-sys v1.8.1
[1m[92m   Compiling[0m cc v1.2.57
[1m[92m    Checking[0m block-buffer v0.10.4
[1m[92m    Checking[0m crypto-common v0.1.7
[1m[92m    Checking[0m digest v0.10.7
[1m[92m    Checking[0m rand_core v0.6.4
[1m[92m    Checking[0m cpufeatures v0.2.17
[1m[92m   Compiling[0m bitflags v1.3.2
[1m[92m    Checking[0m zeroize v1.8.2
[1m[92m    Checking[0m signature v2.2.0
[1m[92m    Checking[0m ed25519 v2.2.3
[1m[92m    Checking[0m curve25519-dalek v4.1.3
[1m[92m   Compiling[0m cmake v0.1.57
[1m[92m   Compiling[0m lz4-sys v1.11.1+lz4-1.10.0
[1m[92m   Compiling[0m libz-sys v1.1.25
[1m[92m   Compiling[0m bindgen v0.72.1
[1m[92m   Compiling[0m bzip2-sys v0.1.13+1.0.8
[1m[92m    Checking[0m ppv-lite86 v0.2.21
[1m[92m    Checking[0m rand_chacha v0.3.1
[1m[92m   Compiling[0m randomx-rs v1.4.1
[1m[92m   Compiling[0m bindgen v0.65.1
[1m[92m    Checking[0m thiserror v1.0.69
[1m[92m    Checking[0m crunchy v0.2.4
[1m[92m    Checking[0m sha2 v0.10.9
[1m[92m    Checking[0m ed25519-dalek v2.2.0
[1m[92m    Checking[0m tiny-keccak v2.0.2
[1m[92m   Compiling[0m zstd-sys v2.0.16+zstd.1.5.7
[1m[92m   Compiling[0m librocksdb-sys v0.11.0+8.1.1
[1m[92m    Checking[0m rand v0.8.5
[1m[92m    Checking[0m hmac v0.12.1
[1m[92m    Checking[0m hex v0.4.3
[1m[92m    Checking[0m bech32 v0.11.1
[1m[92m    Checking[0m waecan-crypto v0.1.0 (/home/runner/work/Waecan/Waecan/crates/waecan-crypto)
[1m[92m    Checking[0m waecan-p2p v0.1.0 (/home/runner/work/Waecan/Waecan/crates/waecan-p2p)
[1m[92m    Checking[0m waecan-node v0.1.0 (/home/runner/work/Waecan/Waecan/crates/waecan-node)
[1m[92m    Checking[0m waecan-mempool v0.1.0 (/home/runner/work/Waecan/Waecan/crates/waecan-mempool)
[1m[92m    Checking[0m waecan-rpc v0.1.0 (/home/runner/work/Waecan/Waecan/crates/waecan-rpc)
[1m[92m    Checking[0m waecan-wallet v0.1.0 (/home/runner/work/Waecan/Waecan/crates/waecan-wallet)
[1m[92m    Checking[0m waecan-cli v0.1.0 (/home/runner/work/Waecan/Waecan/crates/waecan-cli)
[1m[92m    Checking[0m waecan-core v0.1.0 (/home/runner/work/Waecan/Waecan/crates/waecan-core)
[1m[91merror[E0308][0m[1m: mismatched types[0m
  [1m[94m--> [0mcrates/waecan-core/src/pow.rs:26:41
   [1m[94m|[0m
[1m[94m26[0m [1m[94m|[0m     let vm = RandomXVM::new(flags, Some(&cache), None).expect("RandomX VM init failed");
   [1m[94m|[0m                                    [1m[94m----[0m [1m[91m^^^^^^[0m [1m[91mexpected `RandomXCache`, found `&RandomXCache`[0m
   [1m[94m|[0m                                    [1m[94m|[0m
   [1m[94m|[0m                                    [1m[94marguments to this enum variant are incorrect[0m
   [1m[94m|[0m
[1m[96mhelp[0m: the type constructed contains `&randomx_rs::RandomXCache` due to the type of the argument passed
  [1m[94m--> [0mcrates/waecan-core/src/pow.rs:26:36
   [1m[94m|[0m
[1m[94m26[0m [1m[94m|[0m     let vm = RandomXVM::new(flags, Some(&cache), None).expect("RandomX VM init failed");
   [1m[94m|[0m                                    [1m[96m^^^^^[0m[1m[94m------[0m[1m[96m^[0m
   [1m[94m|[0m                                         [1m[94m|[0m
   [1m[94m|[0m                                         [1m[94mthis argument influences the type of `Some`[0m
[1m[92mnote[0m: tuple variant defined here
  [1m[94m--> [0m/rustc/4a4ef493e3a1488c6e321570238084b38948f6db/library/core/src/option.rs:608:4
[1m[96mhelp[0m: consider removing the borrow
   [1m[94m|[0m
[1m[94m26[0m [91m- [0m    let vm = RandomXVM::new(flags, Some([91m&[0mcache), None).expect("RandomX VM init failed");
[1m[94m26[0m [92m+ [0m    let vm = RandomXVM::new(flags, Some(cache), None).expect("RandomX VM init failed");
   [1m[94m|[0m

[1mFor more information about this error, try `rustc --explain E0308`.[0m
[1m[91merror[0m: could not compile `waecan-core` (lib) due to 1 previous error
[1m[33mwarning[0m: build failed, waiting for other jobs to finish...
